--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </title>
   <head>
     <link rel="stylesheet" type="text/css" href="./main.css">
+    <script>"scanner.js"</script>
   </head>
   <body>
     <div id="entry">
@@ -12,7 +13,6 @@
         <input id="enterbar" type="text" name="search" onkeydown="if (event.keyCode == 13){pass}" placeholder="Barcode"/>
       </div>
     </div>
-    <button id="runbutton" type="submit" name="button" onclick="console.log('It was clicked')" value="enter">
-    </button>
+    <button id="runbutton" type="submit" name="button" onclick="assign(0,{0:"Cole Vahey",1:"Eric Jones"})" value="enter"></button>
   </body>
 </html>
