--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="entry">
       <div id="enterspot">
-        <input id="enterbar" type="text" name="search" onkeydown="if (event.keyCode == 13){pass}" placeholder="Barcode"/>
+        <input id="enterbar" type="text" name="search" onkeydown="if (event.keyCode == 13){console.log(document.getElementById('enterbar').value}" placeholder="Barcode"/>
       </div>
     </div>
     <button id="runbutton" type="submit" name="button" onclick="assign(0,{0:"Cole Vahey",1:"Eric Jones"})" value="enter"></button>
