--- a/scanner/src/index.html
+++ b/scanner/src/index.html
@@ -124,7 +124,7 @@ function initCanvas(ww,hh)
 
         function captureToCanvas() {
 		flash = document.getElementById("embedflash");
-		flash.ccCapture();
+    <!--flash.ccCapture();-->
 		qrcode.decode();
         }
 </script>
