--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   </title>
   <head>
     <link rel="stylesheet" type="text/css" href="./main.css">
-    <script>"scanner.js"</script>
+    <script type="text/javascript" src="./site.js"></script>
   </head>
   <body>
     <div id="enterspot">
-      <input id="enterbar" type="text" name="search" onkeyup="console.log('BARCODE')" placeholder="Barcode"/>
+      <input id="enterbar" type="text" name="search" onkeyup="alerter()" placeholder="Barcode"/>
     </div>
   </body>
 </html>
